// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`card header strip — measure (spec §5.2/§5.3) > structural snapshot — first-use instruction present 1`] = `
{
  "atomic": true,
  "heightPt": 36,
  "id": "cardHeader",
  "node": {
    "cardId": "4829306",
    "digitChars": [
      "4",
      "8",
      "2",
      "9",
      "3",
      "0",
      "6",
    ],
    "digitCount": 7,
    "digitXOffsets": [
      0,
      14.02,
      28.02,
      41.39,
      54.37,
      68.05,
      82.48,
    ],
    "firstUse": true,
    "identiconCells": "0110011110000111100111011",
    "identiconVersion": "v1",
    "instructionText": null,
    "kind": "cardHeader",
    "labelText": "Student No.",
    "metaText": "",
    "reuseText": "START A NEW ANSWER SHEET · ROWS 1–12",
  },
  "spacingClass": "heading",
}
`;

exports[`card header strip — measure (spec §5.2/§5.3) > structural snapshot — non-first-use reminder 1`] = `
{
  "atomic": true,
  "heightPt": 36,
  "id": "cardHeader",
  "node": {
    "cardId": "4829306",
    "digitChars": [
      "4",
      "8",
      "2",
      "9",
      "3",
      "0",
      "6",
    ],
    "digitCount": 7,
    "digitXOffsets": [
      0,
      14.02,
      28.02,
      41.39,
      54.37,
      68.05,
      82.48,
    ],
    "firstUse": false,
    "identiconCells": "0110011110000111100111011",
    "identiconVersion": "v1",
    "instructionText": null,
    "kind": "cardHeader",
    "labelText": "Student No.",
    "metaText": "",
    "reuseText": "KEEP USING THE SAME ANSWER SHEET · ROWS 18–30",
  },
  "spacingClass": "heading",
}
`;
